tests/NormalTests/paczka1/fuzzy1/25992207.err
Error in line 3: S72 S661 11,5
Error in line 2: 77N2vygHzf A520 32,4
Error in line 1: h312 A520 86,8
Error in line 7: 77N2vygHzf S72 13,0
Error in line 16: 77N2vygHzf S661 13,8
Error in line 17: 77N2vygHzf A665 92,3
Error in line 22: CyA9YbGdRr7 S72 15,6
